--- a/Login/templates/login.html
+++ b/Login/templates/login.html
@@ -20,6 +20,15 @@
                 </div>
             </div>
 
+            {% if Error %}
+                <div class="alert alert-danger alert-dismissible fade show mt-2" role="alert">
+                    <strong>Erro!</strong> {{Error}}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {% endif %}
+
             <hr>
 
             <div class='d-flex flex-column'>
