--- a/Home/templates/cards.html
+++ b/Home/templates/cards.html
@@ -1,10 +1,10 @@
-<div class='container' style='margin-top: 10%'>
+<div class='container' style='margin-top: 9%'>
 
     <div class='row'>
 
         <div class='col m-2'>
 
-            <div class='card' style='width: 18rem;'>
+            <div class='card' style='width: 18rem; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 10px 0 rgba(0, 0, 0, 0.19);'>
                 <div class="card-body">
 
                     <div class='d-flex justify-content-center flex-column'>
@@ -24,7 +24,7 @@
 
         <div class='col m-2'>
 
-            <div class='card' style='width: 18rem;'>
+            <div class='card' style='width: 18rem; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 10px 0 rgba(0, 0, 0, 0.19);'>
                 <div class="card-body">
 
                     <div class='d-flex justify-content-center flex-column'>
@@ -44,7 +44,7 @@
 
         <div class='col m-2'>
 
-            <div class='card' style='width: 18rem;'>
+            <div class='card' style='width: 18rem; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 10px 0 rgba(0, 0, 0, 0.19);'>
                 <div class="card-body">
 
                     <div class='d-flex justify-content-center flex-column'>
@@ -70,7 +70,7 @@
 
             <div class='col m-2'>
 
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 18rem;  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 10px 0 rgba(0, 0, 0, 0.19);">
                     <div class="card-body">
 
                         <div class='d-flex justify-content-center flex-column'>
@@ -90,7 +90,7 @@
 
             <div class='col m-2'>
 
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 18rem; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 10px 0 rgba(0, 0, 0, 0.19);">
                     <div class="card-body">
 
                         <div class='d-flex justify-content-center flex-column'>
@@ -110,7 +110,7 @@
 
             <div class='col m-2'>
 
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 18rem; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 10px 0 rgba(0, 0, 0, 0.19);">
                     <div class="card-body">
 
                         <div class='d-flex justify-content-center flex-column'>
