--- a/Login/templates/login.html
+++ b/Login/templates/login.html
@@ -10,12 +10,12 @@
             
             <div class='row'>
                 <div class='col'>
-                    <label for="email">E-mail</label>
+                    <label for="email" class='font-weight-bold'>E-mail</label>
                     <input type="email" class='form-control col-12' name="email" id="email" required>
                 </div>
                 
                 <div class='col'>
-                    <label for="password">Senha</label>
+                    <label for="password" class='font-weight-bold'>Senha</label>
                     <input type="password" class='form-control' name="password" id="password">
                 </div>
             </div>
@@ -32,7 +32,7 @@
             <hr>
 
             <div class='d-flex flex-column'>
-                <input type="submit" class='btn btn-primary btn-sm w-50 align-self-center' value="Login" required>
+                <input type="submit" class='btn btn-primary font-weight-bold btn-sm w-50 align-self-center' value="Login" required>
             </div>
 
         </form>
