Adding static files and changing the login required to login required mixin

--- a/Home/templates/base_home.html
+++ b/Home/templates/base_home.html
@@ -7,7 +7,7 @@
     <title>MERC Systems</title>
 </head>
 
-<body class='w-100 h-100'>
+<body class='w-100 h-100' style='background-color: #F2F2F2'>
   
   <nav class="navbar navbar-light bg-dark">
     <div class="container-fluid">
