--- a/Login/templates/login.html
+++ b/Login/templates/login.html
@@ -1,10 +1,13 @@
 {% extends "base_login.html" %}
 {% load django_bootstrap5 %}
+{% load static %}
 
 
 {% block content %}
     
-    <div class="d-flex align-items-center w-100 justify-content-center p-0" style='height: 100vh;'>
+    <div class="d-flex align-items-center w-100 justify-content-center p-0 flex-column" style='height: 90vh;'>
+        <img src="{% static "logo_oficial.jpg" %}" class='mb-4' style='width: 200px; heigth: 200px;' alt="Logo Merc">
+
         <form action="" class='w-50 p-4' method="post">
             {% csrf_token %}
             
