Changing url name of users registers and add Product App

--- a/Home/templates/cards.html
+++ b/Home/templates/cards.html
@@ -100,7 +100,7 @@
 
                             <p class="card-text mt-2">Cadastrar Um Novo Cliente Na Plataforma</p>
                             
-                            <a href="{% url "acl:signclient" %}" class='btn btn-primary'>Cadastrar Cliente</a>
+                            <a href="{% url "acl:register-client" %}" class='btn btn-primary'>Cadastrar Cliente</a>
                         </div>
                 
                     </div>
@@ -120,7 +120,7 @@
 
                             <p class="card-text mt-2">Cadastrar Um Novo Fornecedor Na Plataforma</p>
                             
-                            <a href="{% url "acl:signsupplier" %}" class='btn btn-primary'> Cadastrar Fornecedor</a>
+                            <a href="{% url "acl:register-supplier" %}" class='btn btn-primary'> Cadastrar Fornecedor</a>
                         </div>
                 
                     </div>
