Adding Product Create class

--- a/Home/templates/base_home.html
+++ b/Home/templates/base_home.html
@@ -12,7 +12,7 @@
   <nav class="navbar navbar-light bg-dark">
     <div class="container-fluid">
 
-      <a class="navbar-brand text-white" href="#">
+      <a class="navbar-brand text-white" href="{% url "home:home" %}">
         MERC Systems IT
       </a>
 
