--- a/Home/templates/cards.html
+++ b/Home/templates/cards.html
@@ -54,7 +54,7 @@
 
                         <p class="card-text mt-2">Cadastrar Produtos Para o Estoque!</p>
                         
-                        <a href="{% url "login:login" %}" class='btn btn-primary'>Cadastrar Produtos</a>
+                        <a href="{% url "product:register-product" %}" class='btn btn-primary'>Cadastrar Produtos</a>
                     </div>
                     
                 </div>
