Adding product crude and product sell template

--- a/Home/templates/cards.html
+++ b/Home/templates/cards.html
@@ -14,7 +14,7 @@
 
                         <p class="card-text mt-2">Vender Produtos Que Estão Em Estoque! </p>
                         
-                        <a href="{% url "login:login" %}" class='btn btn-primary'>Vender Produtos</a>
+                        <a href="{% url "product:list-sell" %}" class='btn btn-primary'>Vender Produtos</a>
                     </div>
                     
                 </div>
