--- a/Product/templates/CRUDE_Product/register_product.html
+++ b/Product/templates/CRUDE_Product/register_product.html
@@ -57,7 +57,7 @@
                 
                 <hr>
                 <button class='btn btn-primary' type="submit">Enviar</button>
-                <a href="{% url "product:listproduct" %}" class='btn btn-secondary'>
+                <a href="{% url "product:list-product" %}" class='btn btn-secondary'>
                     Atualizar Produtos
                 </a>
 
